--- a/w1/pong/pong.css
+++ b/w1/pong/pong.css
@@ -1,10 +1,17 @@
 @charset "UTF-8";
 body{
     background-color: black;
-    display:flex;
+    display: flex;
     justify-content: center;
+}
+
+section{
+    display: flex;
+    justify-content: center;
+    color: white;
+    font-size: 80px;
 }
 canvas{
     background-color: black;
-    border:1px solid white;
+    border:2px solid white;
 }
