--- a/W3/se251pong_w3_start_files/pong.css
+++ b/W3/se251pong_w3_start_files/pong.css
@@ -48,3 +48,9 @@ canvas{
     grid-template-columns: auto auto auto;
     
 }
+
+.ball-color{
+    display:flex;
+    flex-direction: column;
+    width: 50%;
+}
