--- a/w4/menus/css/pong.css
+++ b/w4/menus/css/pong.css
@@ -1,4 +1,16 @@
 @charset "UTF-8";
+html{height:100%;}
+body{
+    min-height:100%; 
+    margin:0;
+    display:flex; 
+    justify-content: center;
+    background-color: rgb(0,0,0);
+}
+main{
+    color:white;
+    display:flex;
+}
 
 #score{
     display:flex;
@@ -21,9 +33,10 @@ canvas{
 #options{
     margin-left:24px;
 }
-.sides{
-
+#options h2{
+    cursor:pointer;
 }
+
 .hidden{
     height:0;
     overflow-y:hidden;
@@ -32,5 +45,12 @@ canvas{
     width: 400px;
     color:#ffffff;
     display:grid;
-    grid-template-columns: auto auto auto; 
+    grid-template-columns: auto auto auto;
+    
+}
+
+.ball-color{
+    display:flex;
+    flex-direction: column;
+    width: 50%;
 }
